--- a/theme2_extreme_events/ioos_extreme_events_waves.ipynb
+++ b/theme2_extreme_events/ioos_extreme_events_waves.ipynb
@@ -18,7 +18,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Can we estimate the return period of a wave height by comparing modeled and/or observed wave heights with NOAA exceedance probability plots?"
+      "### Can we estimate the return period of a wave height by obtaining long term wave height records from observed and modelled datasets?"
      ]
     },
     {
