--- a/Theme_1_Baseline/Scenario_1D_Realtime_DO_Nutrients/Scenario_1D_DO_Nutrients.ipynb
+++ b/Theme_1_Baseline/Scenario_1D_Realtime_DO_Nutrients/Scenario_1D_DO_Nutrients.ipynb
@@ -8,6 +8,45 @@
   {
    "cells": [
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from utilities import css_styles\n",
+      "css_styles()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "html": [
+        "\n",
+        "        <style>\n",
+        "        .info {\n",
+        "            background-color: #fcf8e3; border-color: #faebcc; border-left: 5px solid #8a6d3b; padding: 0.5em; color: #8a6d3b;\n",
+        "        }\n",
+        "        .success {\n",
+        "            background-color: #d9edf7; border-color: #bce8f1; border-left: 5px solid #31708f; padding: 0.5em; color: #31708f;\n",
+        "        }\n",
+        "        .error {\n",
+        "            background-color: #f2dede; border-color: #ebccd1; border-left: 5px solid #a94442; padding: 0.5em; color: #a94442;\n",
+        "        }\n",
+        "        .warning {\n",
+        "            background-color: #fcf8e3; border-color: #faebcc; border-left: 5px solid #8a6d3b; padding: 0.5em; color: #8a6d3b;\n",
+        "        }\n",
+        "        </style>\n",
+        "    "
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 1,
+       "text": [
+        "<IPython.core.display.HTML at 0x7fcd367c96d0>"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -33,18 +72,275 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "from pylab import *\n",
+      "from owslib.csw import CatalogueServiceWeb\n",
+      "from owslib import fes\n",
+      "import random\n",
+      "import netCDF4\n",
+      "import pandas as pd\n",
+      "import datetime as dt\n",
+      "from pyoos.collectors.coops.coops_sos import CoopsSos\n",
+      "import cStringIO\n",
+      "import iris\n",
+      "import urllib2\n",
+      "import parser\n",
+      "from lxml import etree\n",
+      "\n",
+      "import numpy as np\n",
+      "\n",
+      "#generated for csw interface\n",
+      "#from date_range_formatter import dateRange  #date formatter (R.Signell)\n",
+      "import requests              #required for the processing of requests\n",
+      "from utilities import * \n",
+      "\n",
+      "from IPython.display import HTML\n",
+      "import folium #required for leaflet mapping\n",
+      "import calendar #used to get number of days in a month and year"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Define space and time constraints"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Kachemak Bay, because I know there's a DO sensor on a NERRS station on the Homer Spit."
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "#bounding box of interest,[bottom right[lon,lat], top left[lon,lat]]\n",
+      "#bounding_box_type = \"box\"\n",
+      "#bounding_box = [[-152.0,59.25],[-150.6,60.00]]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 22
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Atlantic Coast, Eric Bridger says [NeraCOOS](http://www.neracoos.org/realtime_map) has DO measurements (yellow squares on their real-time data portal)."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#bounding box of interest,[bottom right[lon,lat], top left[lon,lat]]\n",
+      "bounding_box_type = \"box\" \n",
+      "bounding_box = [[-72.5,41.0],[-68.5,44.0]]\n",
+      "\n",
+      "#temporal range\n",
+      "#I'm just interested in this year\n",
+      "start_date = dt.datetime(2014,1,1).strftime('%Y-%m-%d %H:00')\n",
+      "end_date = dt.datetime(2014,7,13).strftime('%Y-%m-%d %H:00')\n",
+      "time_date_range = [start_date,end_date]  #start_date_end_date\n",
+      "\n",
+      "print bounding_box\n",
+      "print start_date,'to',end_date"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[-72.5, 41.0], [-68.5, 44.0]]\n",
+        "2014-01-01 00:00 to 2014-07-13 00:00\n"
+       ]
+      }
+     ],
+     "prompt_number": 23
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Define the web-service endpoints to check"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "endpoint = 'http://www.ngdc.noaa.gov/geoportal/csw' # NGDC Geoportal\n",
+      "\n",
+      "csw = CatalogueServiceWeb(endpoint,timeout=60)\n",
+      "\n",
+      "for oper in csw.operations:\n",
+      "    if oper.name == 'GetRecords':\n",
+      "        #print '\\nISO Queryables:\\n',oper.constraints['SupportedISOQueryables']['values']\n",
+      "        pass\n",
+      "        \n",
+      "print endpoint"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "http://www.ngdc.noaa.gov/geoportal/csw\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Define what possible variables we're looking for using [CF standard names](http://mmisw.org/orr/#http://mmisw.org/ont/cf/parameter)."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#put the names in a dict for ease of access \n",
+      "data_dict = {}\n",
+      "data_dict[\"doxygen\"] = {\"names\":['fractional_saturation_of_oxygen_in_sea_water',\n",
+      "                            'mass_concentration_of_oxygen_in_sea_water',\n",
+      "                            'mole_concentration_of_dissolved_molecular_oxygen_in_sea_water',\n",
+      "                            'moles_of_oxygen_per_unit_mass_in_sea_water',\n",
+      "                            'volume_fraction_of_oxygen_in_sea_water'],\n",
+      "                      \"sos_name\":[\"doxygen\"]}"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Set up OWSlib and it's FES filter capabilities. This puts our bounding box and data_dict into a form that OWSLib can use to hit our OGC web-service endpoints."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def dateRange(start_date='1900-01-01',stop_date='2100-01-01',constraint='overlaps'):\n",
+      "    if constraint == 'overlaps':\n",
+      "        start = fes.PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_begin', literal=stop_date)\n",
+      "        stop = fes.PropertyIsGreaterThanOrEqualTo(propertyname='apiso:TempExtent_end', literal=start_date)\n",
+      "    elif constraint == 'within':\n",
+      "        start = fes.PropertyIsGreaterThanOrEqualTo(propertyname='apiso:TempExtent_begin', literal=start_date)\n",
+      "        stop = fes.PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_end', literal=stop_date)\n",
+      "    return start,stop"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# convert User Input into FES filters\n",
+      "start,stop = dateRange(start_date,end_date)\n",
+      "box = []\n",
+      "box.append(bounding_box[0][0])\n",
+      "box.append(bounding_box[0][1])\n",
+      "box.append(bounding_box[1][0])\n",
+      "box.append(bounding_box[1][1])\n",
+      "bbox = fes.BBox(box)\n",
+      "\n",
+      "#use the search name to create search filter\n",
+      "or_filt = fes.Or([fes.PropertyIsLike(propertyname='apiso:AnyText',literal=('*%s*' % val),\n",
+      "                    escapeChar='\\\\',wildCard='*',singleChar='?') for val in data_dict[\"doxygen\"][\"names\"]])\n",
+      "#not sure if I need this or not\n",
+      "val = 'Averages'\n",
+      "not_filt = fes.Not([fes.PropertyIsLike(propertyname='apiso:AnyText',literal=('*%s*' % val),\n",
+      "                        escapeChar='\\\\',wildCard='*',singleChar='?')])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "filter_list = [fes.And([ bbox, start, stop, or_filt, not_filt]) ]\n",
+      "# connect to CSW, explore it's properties\n",
+      "# try request using multiple filters \"and\" syntax: [[filter1,filter2]]\n",
+      "csw.getrecords2(constraints=filter_list,maxrecords=1000,esn='full')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def service_urls(records,service_string='urn:x-esri:specification:ServiceType:odp:url'):\n",
+      "    \"\"\"\n",
+      "    extract service_urls of a specific type (DAP, SOS) from records\n",
+      "    \"\"\"\n",
+      "    urls=[]\n",
+      "    for key,rec in records.iteritems():        \n",
+      "        #create a generator object, and iterate through it until the match is found\n",
+      "        #if not found, gets the default value (here \"none\")\n",
+      "        url = next((d['url'] for d in rec.references if d['scheme'] == service_string), None)\n",
+      "        if url is not None:\n",
+      "            urls.append(url)\n",
+      "    return urls"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#print records that are available\n",
+      "print \"number of datasets available: \",len(csw.records.keys())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "number of datasets available:  0\n"
+       ]
+      }
+     ],
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<div class=\"error\"><strong>Well that ain't good</strong> - I seem to be getting no datasets available for this. Either they aren't in the CSW, or the standard names aren't correct?</div>"
+     ]
     }
    ],
    "metadata": {}
