Add fault documentation to DO notebook

--- a/Theme_1_Baseline/Scenario_1D_Realtime_DO_Nutrients/Scenario_1D_DO_Nutrients.ipynb
+++ b/Theme_1_Baseline/Scenario_1D_Realtime_DO_Nutrients/Scenario_1D_DO_Nutrients.ipynb
@@ -40,7 +40,7 @@
        "output_type": "pyout",
        "prompt_number": 1,
        "text": [
-        "<IPython.core.display.HTML at 0x7fcd367c96d0>"
+        "<IPython.core.display.HTML at 0x7fa9f06486d0>"
        ]
       }
      ],
@@ -128,7 +128,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -166,7 +166,7 @@
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -176,32 +176,39 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<div class=\"error\"><strong>This next line fails</strong> - for USGS Coastal and Marine Program and the CKAN testing site - Cannot load/process capabilities. All the other CSWs work.</div>"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "endpoint = 'http://www.ngdc.noaa.gov/geoportal/csw' # NGDC Geoportal\n",
+      "#endpoint = 'http://www.nodc.noaa.gov/geoportal/csw'   # NODC Geoportal: granule level\n",
+      "#endpoint = 'http://data.nodc.noaa.gov/geoportal/csw'  # NODC Geoportal: collection level   \n",
+      "#endpoint = 'http://geodiscover.cgdi.ca/wes/serviceManagerCSW/csw'  # NRCAN CUSTOM\n",
+      "#endpoint = 'http://geoport.whoi.edu/gi-cat/services/cswiso' # USGS Woods Hole GI_CAT\n",
+      "#endpoint = 'http://cida.usgs.gov/gdp/geonetwork/srv/en/csw' # USGS CIDA Geonetwork\n",
+      "#endpoint = 'http://cmgds.marine.usgs.gov/geonetwork/srv/en/csw' # USGS Coastal and Marine Program\n",
+      "#endpoint = 'http://geoport.whoi.edu/geoportal/csw' # USGS Woods Hole Geoportal \n",
+      "#endpoint = 'http://geo.gov.ckan.org/csw'  # CKAN testing site for new Data.gov\n",
+      "#endpoint = 'https://edg.epa.gov/metadata/csw'  # EPA\n",
+      "#endpoint = 'http://cwic.csiss.gmu.edu/cwicv1/discovery'  # CWIC\n",
       "\n",
       "csw = CatalogueServiceWeb(endpoint,timeout=60)\n",
       "\n",
       "for oper in csw.operations:\n",
       "    if oper.name == 'GetRecords':\n",
       "        #print '\\nISO Queryables:\\n',oper.constraints['SupportedISOQueryables']['values']\n",
-      "        pass\n",
-      "        \n",
-      "print endpoint"
+      "        pass"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "http://www.ngdc.noaa.gov/geoportal/csw\n"
-       ]
-      }
-     ],
-     "prompt_number": 11
+     "outputs": [],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -226,7 +233,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -251,7 +258,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -277,13 +284,20 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<div class=\"error\"><strong>The filter creation below fails</strong> - with Woods Hole GII-CAT, Woods Hole Geoportal, NRCAN CUSTOM, nor CWIC. The other work.</div>"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "filter_list = [fes.And([ bbox, start, stop, or_filt, not_filt]) ]\n",
+      "filter_list = [fes.And([bbox, start, stop, or_filt, not_filt]) ]\n",
       "# connect to CSW, explore it's properties\n",
       "# try request using multiple filters \"and\" syntax: [[filter1,filter2]]\n",
       "csw.getrecords2(constraints=filter_list,maxrecords=1000,esn='full')"
@@ -291,7 +305,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -313,14 +327,23 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "What's in the result set?"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "#print records that are available\n",
-      "print \"number of datasets available: \",len(csw.records.keys())"
+      "print endpoint\n",
+      "print \"number of datasets available: \",len(csw.records.keys())\n",
+      "csw.records.keys()"
      ],
      "language": "python",
      "metadata": {},
@@ -329,17 +352,26 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "http://www.ngdc.noaa.gov/geoportal/csw\n",
         "number of datasets available:  0\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "[]"
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<div class=\"error\"><strong>Well that ain't good</strong> - I seem to be getting no datasets available for this. Either they aren't in the CSW, or the standard names aren't correct?</div>"
+      "<div class=\"error\"><strong>Well that ain't good</strong> - I seem to be getting no datasets available for dissolved oxygen. This may mean that NERRS stations aren't registered in any CSW (that we have here at least)? I've checked all the catalogs that work: NGDC, NODC granule-level, NODC collection-level, USGS CIDA, and EPA</div>"
      ]
     }
    ],
