--- a/Theme_1_Baseline/Scenario_1D_DO.ipynb
+++ b/Theme_1_Baseline/Scenario_1D_DO.ipynb
@@ -38,13 +38,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 22,
+       "prompt_number": 8,
        "text": [
-        "<IPython.core.display.HTML at 0x7f42af07f910>"
+        "<IPython.core.display.HTML at 0x7f3282e25990>"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -52,14 +52,13 @@
      "source": [
       "# IOOS System Test - Theme 1 - Scenario D - [Description](https://github.com/ioos/system-test/wiki/Development-of-Test-Themes#theme1)/[Discussion](https://github.com/ioos/system-test/issues/114)\n",
       "\n",
-      "## Exploring Dissolved Oxygen and Nutrient Data\n",
+      "## Exploring Dissolved Oxygen Data\n",
       "\n",
       "## Questions\n",
       "1. Can we discover, access, and overlay dissolved oxygen information?\n",
-      "2. Can we discover, access, and overlay nutrient information \n",
-      "3. Is data from different sensors or sources directly comparable?\n",
-      "4. If not, how much work is necessary to aggregate these streams?\n",
-      "5. Is metadata for these data intelligable?"
+      "2. Is data from different sensors or sources directly comparable?\n",
+      "3. If not, how much work is necessary to aggregate these streams?\n",
+      "4. Is metadata for these data intelligable?"
      ]
     },
     {
@@ -79,8 +78,10 @@
       "import random\n",
       "import netCDF4\n",
       "import pandas as pd\n",
-      "import datetime as dt\n",
+      "#import datetime as dt\n",
+      "from datetime import datetime, timedelta\n",
       "from pyoos.collectors.coops.coops_sos import CoopsSos\n",
+      "from pyoos.collectors.nerrs.nerrs_soap import NerrsSoap\n",
       "import cStringIO\n",
       "import iris\n",
       "import urllib2\n",
@@ -101,7 +102,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 27
     },
     {
      "cell_type": "markdown",
@@ -128,7 +129,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 24
+     "prompt_number": 28
     },
     {
      "cell_type": "markdown",
@@ -147,8 +148,8 @@
       "\n",
       "#temporal range\n",
       "#I'm just interested in this year\n",
-      "start_date = dt.datetime(2014,1,1).strftime('%Y-%m-%d %H:00')\n",
-      "end_date = dt.datetime(2014,7,13).strftime('%Y-%m-%d %H:00')\n",
+      "start_date = datetime(2014,1,1).strftime('%Y-%m-%d %H:00')\n",
+      "end_date = datetime(2014,7,13).strftime('%Y-%m-%d %H:00')\n",
       "time_date_range = [start_date,end_date]  #start_date_end_date\n",
       "\n",
       "print bounding_box\n",
@@ -166,7 +167,7 @@
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 29
     },
     {
      "cell_type": "markdown",
@@ -207,33 +208,14 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "HTTPError",
-       "evalue": "HTTP Error 404: Not Found",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-26-93a57744be3e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;31m#endpoint = 'http://cwic.csiss.gmu.edu/cwicv1/discovery'  # CWIC\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mcsw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCatalogueServiceWeb\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mendpoint\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0moper\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcsw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moperations\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/will/anaconda/lib/python2.7/site-packages/OWSLib-0.8.7-py2.7.egg/owslib/csw.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, url, lang, version, timeout, skip_caps)\u001b[0m\n\u001b[0;32m     71\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrequest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'%s%s'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mbind_url\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0murl\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0murlencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     72\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 73\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_invoke\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     74\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     75\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexceptionreport\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/will/anaconda/lib/python2.7/site-packages/OWSLib-0.8.7-py2.7.egg/owslib/csw.py\u001b[0m in \u001b[0;36m_invoke\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    585\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    586\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrequest\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbasestring\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m# GET KVP\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 587\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0murlopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrequest\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    588\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    589\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrequest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcleanup_namespaces\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrequest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/will/anaconda/lib/python2.7/urllib2.pyc\u001b[0m in \u001b[0;36murlopen\u001b[1;34m(url, data, timeout)\u001b[0m\n\u001b[0;32m    125\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0m_opener\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    126\u001b[0m         \u001b[0m_opener\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbuild_opener\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 127\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0m_opener\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    128\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    129\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0minstall_opener\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mopener\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/will/anaconda/lib/python2.7/urllib2.pyc\u001b[0m in \u001b[0;36mopen\u001b[1;34m(self, fullurl, data, timeout)\u001b[0m\n\u001b[0;32m    408\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mprocessor\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprocess_response\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprotocol\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    409\u001b[0m             \u001b[0mmeth\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocessor\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmeth_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 410\u001b[1;33m             \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmeth\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreq\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    411\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    412\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/will/anaconda/lib/python2.7/urllib2.pyc\u001b[0m in \u001b[0;36mhttp_response\u001b[1;34m(self, request, response)\u001b[0m\n\u001b[0;32m    521\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m200\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0mcode\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m300\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    522\u001b[0m             response = self.parent.error(\n\u001b[1;32m--> 523\u001b[1;33m                 'http', request, response, code, msg, hdrs)\n\u001b[0m\u001b[0;32m    524\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    525\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/will/anaconda/lib/python2.7/urllib2.pyc\u001b[0m in \u001b[0;36merror\u001b[1;34m(self, proto, *args)\u001b[0m\n\u001b[0;32m    446\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mhttp_err\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    447\u001b[0m             \u001b[0margs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdict\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'default'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'http_error_default'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0morig_args\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 448\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_call_chain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    449\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    450\u001b[0m \u001b[1;31m# XXX probably also want an abstract factory that knows when it makes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/will/anaconda/lib/python2.7/urllib2.pyc\u001b[0m in \u001b[0;36m_call_chain\u001b[1;34m(self, chain, kind, meth_name, *args)\u001b[0m\n\u001b[0;32m    380\u001b[0m             \u001b[0mfunc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhandler\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmeth_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    381\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 382\u001b[1;33m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    383\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mresult\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    384\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/will/anaconda/lib/python2.7/urllib2.pyc\u001b[0m in \u001b[0;36mhttp_error_default\u001b[1;34m(self, req, fp, code, msg, hdrs)\u001b[0m\n\u001b[0;32m    529\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mHTTPDefaultErrorHandler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBaseHandler\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    530\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mhttp_error_default\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreq\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhdrs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 531\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mHTTPError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_full_url\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhdrs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    532\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    533\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mHTTPRedirectHandler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBaseHandler\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mHTTPError\u001b[0m: HTTP Error 404: Not Found"
-       ]
-      }
-     ],
-     "prompt_number": 26
+     "outputs": [],
+     "prompt_number": 30
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Define what possible variables we're looking for using [CF standard names](http://mmisw.org/orr/#http://mmisw.org/ont/cf/parameter)."
+      "Define what possible variables we're looking for using [CF standard names](http://mmisw.org/orr/#http://mmisw.org/ont/cf/parameter). I also added 'oxygen_concentration_in_sea_water' because I know that's what NERRS uses (even though it is not CF standard). Adding 'oxygen' alone does return some results via CSWs."
      ]
     },
     {
@@ -247,13 +229,14 @@
       "                            'mole_concentration_of_dissolved_molecular_oxygen_in_sea_water',\n",
       "                            'moles_of_oxygen_per_unit_mass_in_sea_water',\n",
       "                            'volume_fraction_of_oxygen_in_sea_water',\n",
-      "                            'oxygen'],\n",
+      "                            #'oxygen',\n",
+      "                            'oxygen_concentration_in_sea_water'],\n",
       "                      \"sos_name\":[\"doxygen\"]}"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 31
     },
     {
      "cell_type": "markdown",
@@ -278,7 +261,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -304,7 +287,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 33
     },
     {
      "cell_type": "markdown",
@@ -325,7 +308,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 34
     },
     {
      "cell_type": "code",
@@ -347,7 +330,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 35
     },
     {
      "cell_type": "markdown",
@@ -373,59 +356,34 @@
        "stream": "stdout",
        "text": [
         "http://www.ngdc.noaa.gov/geoportal/csw\n",
-        "number of datasets available:  34\n"
+        "number of datasets available:  0\n"
        ]
       },
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 36,
        "text": [
-        "['SOS_DSG_A01_DOPPLER',\n",
-        " 'SOS_DSG_B01_DOPPLER',\n",
-        " 'SOS_DSG_E01_DOPPLER',\n",
-        " 'SOS_DSG_E01_CTD87m',\n",
-        " 'SOS_DSG_A01_ACCELEROMETER_Historic_Realtime_Agg',\n",
-        " 'SOS_DSG_A01_CTD1m_Historic_Realtime_Agg',\n",
-        " 'SOS_DSG_A01_CTD20m_Historic_Realtime_Agg',\n",
-        " 'SOS_DSG_A01_MET_Historic_Realtime_Agg',\n",
-        " 'SOS_A01_optics_s3m_Historic_Realtime_Agg',\n",
-        " 'SOS_DSG_A01_OPTODE51m_Historic_Realtime_Agg',\n",
-        " 'SOS_DSG_B01_AANDERAA_Historic_Realtime_Agg',\n",
-        " 'SOS_DSG_B01_ACCELEROMETER_Historic_Realtime_Agg',\n",
-        " 'SOS_DSG_B01_CTD1m_Historic_Realtime_Agg',\n",
-        " 'SOS_DSG_B01_CTD20m_Historic_Realtime_Agg',\n",
-        " 'SOS_DSG_B01_CTD50m',\n",
-        " 'SOS_DSG_B01_CTD52m',\n",
-        " 'SOS_DSG_B01_MET_Historic_Realtime_Agg',\n",
-        " 'B01_aanderaa_hist',\n",
-        " 'B01_sbe16_all',\n",
-        " 'CINAR_DSG_MA101_echorange',\n",
-        " 'CINAR_DSG_MA101_met',\n",
-        " 'CINAR_DSG_MA101_sbe37',\n",
-        " 'CINAR_DSG_MA101_waves',\n",
-        " 'CINAR_DSG_ME101_echorange',\n",
-        " 'CINAR_DSG_ME101_met',\n",
-        " 'CINAR_DSG_ME101_sbe37',\n",
-        " 'CINAR_DSG_ME101_waves',\n",
-        " 'SOS_DSG_E01_AANDERAA_Historic_Realtime_Agg',\n",
-        " 'SOS_DSG_E01_ACCELEROMETER_Historic_Realtime_Agg',\n",
-        " 'SOS_DSG_E01_CTD1m_Historic_Realtime_Agg',\n",
-        " 'SOS_DSG_E01_CTD20m_Historic_Realtime_Agg',\n",
-        " 'SOS_DSG_E01_CTD50m',\n",
-        " 'SOS_DSG_E01_MET_Historic_Realtime_Agg',\n",
-        " 'E01_aanderaa_hist']"
+        "[]"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 36
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<div class=\"success\"><strong>Conclusions</strong> - Using only the CF standard names for dissolved oxygen return zero results. Add the ambiguous 'oxygen' search term returns 34 results, but none of these are the NERRS stations that I know exist. This may mean that NERRS stations aren't registered in any CSW, even though their website says they partner with IOOS. I've checked all the catalogs that work and accept filters: NGDC, NODC granule-level, NODC collection-level, USGS CIDA, and EPA.</div>"
+      "<div class=\"success\"><strong>Conclusions</strong> - Using only the CF standard names for dissolved oxygen return zero results. The NERRS stations are  Add the ambiguous 'oxygen' search term returns 34 results, but none of these are the NERRS stations that I know exist. This may mean that NERRS stations aren't registered in any CSW, even though their website says they partner with IOOS. I've checked all the catalogs that work and accept filters: NGDC, NODC granule-level, NODC collection-level, USGS CIDA, and EPA.</div>"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
