Renamed FES date filtering function
`date_range` and `dateRange` functions renamed to `fes_date_filter`

--- a/Theme_1_Baseline/Scenario_1E_Salinity.ipynb
+++ b/Theme_1_Baseline/Scenario_1E_Salinity.ipynb
@@ -90,7 +90,7 @@
       "import numpy as np\n",
       "\n",
       "#generated for csw interface\n",
-      "#from date_range_formatter import dateRange  #date formatter (R.Signell)\n",
+      "#from fes_date_filter_formatter import fes_date_filter  #date formatter (R.Signell)\n",
       "import requests              #required for the processing of requests\n",
       "from utilities import * \n",
       "\n",
@@ -227,7 +227,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def dateRange(start_date='1900-01-01',stop_date='2100-01-01',constraint='overlaps'):\n",
+      "def fes_date_filter(start_date='1900-01-01',stop_date='2100-01-01',constraint='overlaps'):\n",
       "    if constraint == 'overlaps':\n",
       "        start = fes.PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_begin', literal=stop_date)\n",
       "        stop = fes.PropertyIsGreaterThanOrEqualTo(propertyname='apiso:TempExtent_end', literal=start_date)\n",
@@ -246,7 +246,7 @@
      "collapsed": false,
      "input": [
       "# convert User Input into FES filters\n",
-      "start,stop = dateRange(start_date,end_date)\n",
+      "start,stop = fes_date_filter(start_date,end_date)\n",
       "box = []\n",
       "box.append(bounding_box[0][0])\n",
       "box.append(bounding_box[0][1])\n",
