--- a/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_Extremes_Inundation/Scenario_A_Extreme_Water_Level.ipynb
+++ b/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_Extremes_Inundation/Scenario_A_Extreme_Water_Level.ipynb
@@ -68,7 +68,7 @@
       "from pyoos.collectors.coops.coops_sos import CoopsSos\n",
       "import scipy.stats as stats\n",
       "\n",
-      "from utilities import (get_Coops_longName, dateRange, get_coordinates, service_urls, inline_map, coops2data, find_timevar, \n",
+      "from utilities import (get_Coops_longName, fes_date_filter, get_coordinates, service_urls, inline_map, coops2data, find_timevar, \n",
       "                        find_ij, nearxy, mod_df)\n",
       " "
      ],
@@ -243,7 +243,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "start, stop = dateRange(start_date, end_date)\n",
+      "start, stop = fes_date_filter(start_date, end_date)\n",
       "box = []\n",
       "box.append(bounding_box[0][0])\n",
       "box.append(bounding_box[0][1])\n",
@@ -938,7 +938,7 @@
      "collapsed": false,
      "input": [
       "# Create time index for model DataFrame\n",
-      "ts_rng = pd.date_range(start=jd_start, end=jd_stop, freq='6Min')\n",
+      "ts_rng = pd.fes_date_filter(start=jd_start, end=jd_stop, freq='6Min')\n",
       "ts = pd.DataFrame(index=ts_rng)\n",
       "\n",
       "#Get the station lat/lon into lists and create list of model DataFrames for each station\n",
