--- a/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_ModelDataCompare_Inundation/Scenario_2A_Water_Level_Signell.ipynb
+++ b/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_ModelDataCompare_Inundation/Scenario_2A_Water_Level_Signell.ipynb
@@ -49,7 +49,7 @@
       "import matplotlib.pyplot as plt\n",
       "from matplotlib.transforms import offset_copy\n",
       "from cartopy.io.img_tiles import MapQuestOpenAerial\n",
-      "from pandas import DataFrame, date_range, read_csv, concat\n",
+      "from pandas import DataFrame, fes_date_filter, read_csv, concat\n",
       "\n",
       "from iris.exceptions import CoordinateNotFoundError, ConstraintMismatchError\n",
       "\n",
@@ -60,7 +60,7 @@
       "\n",
       "# Local imports\n",
       "from utilities import name_list, sos_name\n",
-      "from utilities import (dateRange, coops2df, find_timevar, find_ij, nearxy,\n",
+      "from utilities import (fes_date_filter, coops2df, find_timevar, find_ij, nearxy,\n",
       "                       service_urls, mod_df)"
      ],
      "language": "python",
@@ -280,7 +280,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "start, stop = dateRange(start_date, stop_date)\n",
+      "start, stop = fes_date_filter(start_date, stop_date)\n",
       "bbox = fes.BBox(box)"
      ],
      "language": "python",
@@ -747,7 +747,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ts_rng = date_range(start=jd_start, end=jd_stop, freq='6Min')\n",
+      "ts_rng = fes_date_filter(start=jd_start, end=jd_stop, freq='6Min')\n",
       "ts = DataFrame(index=ts_rng)\n",
       "print(jd_start, jd_stop)\n",
       "print(len(ts))"
