--- a/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_Extremes_Currents/Scenario_2A_Extreme_Currents.ipynb
+++ b/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_Extremes_Currents/Scenario_2A_Extreme_Currents.ipynb
@@ -75,7 +75,7 @@
       "from pyoos.collectors.coops.coops_sos import CoopsSos\n",
       "import requests\n",
       "\n",
-      "from utilities import (date_range, coops2df, coops2data, find_timevar, find_ij, nearxy, service_urls, mod_df, \n",
+      "from utilities import (fes_date_filter, coops2df, coops2data, find_timevar, find_ij, nearxy, service_urls, mod_df, \n",
       "                       get_coordinates, get_Coops_longName, inline_map, get_coops_sensor_name,css_styles)\n",
       "\n",
       "import cStringIO\n",
@@ -218,7 +218,7 @@
      "collapsed": false,
      "input": [
       "# convert User Input into FES filters\n",
-      "start,stop = date_range(start_date,stop_date)\n",
+      "start,stop = fes_date_filter(start_date,stop_date)\n",
       "bbox = fes.BBox(bounding_box)\n",
       "\n",
       "#use the search name to create search filter\n",
