--- a/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_ModelDataCompare_Currents/Scenario_2A_Model_Obs_Compare_Currents.ipynb
+++ b/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_ModelDataCompare_Currents/Scenario_2A_Model_Obs_Compare_Currents.ipynb
@@ -60,7 +60,7 @@
       "from pyoos.collectors.coops.coops_sos import CoopsSos\n",
       "import requests\n",
       "\n",
-      "from utilities import (date_range, coops2df, find_timevar, find_ij, nearxy, service_urls, mod_df, \n",
+      "from utilities import (fes_date_filter, coops2df, find_timevar, find_ij, nearxy, service_urls, mod_df, \n",
       "                       get_coordinates, inline_map, get_Coops_longName)"
      ],
      "language": "python",
@@ -230,7 +230,7 @@
      "collapsed": false,
      "input": [
       "# convert User Input into FES filters\n",
-      "start,stop = date_range(start_date,stop_date)\n",
+      "start,stop = fes_date_filter(start_date,stop_date)\n",
       "bbox = fes.BBox(bounding_box)\n",
       "\n",
       "#use the search name to create search filter\n",
@@ -1048,7 +1048,7 @@
      "collapsed": false,
      "input": [
       "# # Create time index for model DataFrame\n",
-      "ts_rng = pd.date_range(start=jd_start, end=jd_stop, freq='6Min')\n",
+      "ts_rng = pd.fes_date_filter(start=jd_start, end=jd_stop, freq='6Min')\n",
       "ts = pd.DataFrame(index=ts_rng)\n",
       "\n",
       "# Create list of model DataFrames for each station\n",
