--- a/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_ModelDataCompare_Waves/Scenario_A_Model_Obs_Compare_Waves.ipynb
+++ b/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_ModelDataCompare_Waves/Scenario_A_Model_Obs_Compare_Waves.ipynb
@@ -59,7 +59,7 @@
       "from pyoos.collectors.ndbc.ndbc_sos import NdbcSos\n",
       "import requests\n",
       "\n",
-      "from utilities import date_range, coops2df, find_timevar, find_ij, nearxy, service_urls, mod_df, get_coordinates"
+      "from utilities import fes_date_filter, coops2df, find_timevar, find_ij, nearxy, service_urls, mod_df, get_coordinates"
      ],
      "language": "python",
      "metadata": {},
@@ -179,7 +179,7 @@
      "collapsed": false,
      "input": [
       "# convert User Input into FES filters\n",
-      "start,stop = date_range(start_date,end_date)\n",
+      "start,stop = fes_date_filter(start_date,end_date)\n",
       "box = []\n",
       "box.append(bounding_box[0][0])\n",
       "box.append(bounding_box[0][1])\n",
@@ -670,7 +670,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ts_rng = pd.date_range(start=start_date, end=end_date)\n",
+      "ts_rng = pd.fes_date_filter(start=start_date, end=end_date)\n",
       "ts = pd.DataFrame(index=ts_rng)\n",
       "\n",
       "Hs_obs_df = []\n",
