Fixed pandas date_filter

--- a/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_ModelDataCompare_Waves/Scenario_A_Model_Obs_Compare_Waves.ipynb
+++ b/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_ModelDataCompare_Waves/Scenario_A_Model_Obs_Compare_Waves.ipynb
@@ -670,7 +670,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ts_rng = pd.fes_date_filter(start=start_date, end=end_date)\n",
+      "ts_rng = pd.date_filter(start=start_date, end=end_date)\n",
       "ts = pd.DataFrame(index=ts_rng)\n",
       "\n",
       "Hs_obs_df = []\n",
