--- a/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_Extremes_Inundation/Scenario_A_Extreme_Water_Level.ipynb
+++ b/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_Extremes_Inundation/Scenario_A_Extreme_Water_Level.ipynb
@@ -938,7 +938,7 @@
      "collapsed": false,
      "input": [
       "# Create time index for model DataFrame\n",
-      "ts_rng = pd.date_filter(start=jd_start, end=jd_stop, freq='6Min')\n",
+      "ts_rng = pd.date_range(start=jd_start, end=jd_stop, freq='6Min')\n",
       "ts = pd.DataFrame(index=ts_rng)\n",
       "\n",
       "#Get the station lat/lon into lists and create list of model DataFrames for each station\n",
