--- a/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_ModelDataCompare_Currents/Scenario_2A_Model_Obs_Compare_Currents.ipynb
+++ b/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_ModelDataCompare_Currents/Scenario_2A_Model_Obs_Compare_Currents.ipynb
@@ -1048,7 +1048,7 @@
      "collapsed": false,
      "input": [
       "# # Create time index for model DataFrame\n",
-      "ts_rng = pd.date_filter(start=jd_start, end=jd_stop, freq='6Min')\n",
+      "ts_rng = pd.date_range(start=jd_start, end=jd_stop, freq='6Min')\n",
       "ts = pd.DataFrame(index=ts_rng)\n",
       "\n",
       "# Create list of model DataFrames for each station\n",
