remove reference to numpy, make it np

--- a/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_Extremes_Waves/Scenario_2A_Waves.ipynb
+++ b/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_Extremes_Waves/Scenario_2A_Waves.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e0675857d3617a0e9391fe732d8ad5b06cb84b0b4f369dc3659efc05bba551b7"
+  "signature": "sha256:d6661e72aaa67d419aecad386d2821c250e14dfbb580466d19327f78b567f81d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1038,7 +1038,7 @@
       "    hs = nc.variables['wave_height']\n",
       "    hs_data = np.array(nc.variables['wave_height'][:,0,0])\n",
       "    # Replace fill values with NaN\n",
-      "    hs_data[hs_data==hs._FillValue] = numpy.nan\n",
+      "    hs_data[hs_data==hs._FillValue] = np.nan\n",
       "    \n",
       "    dates = num2date(nc_time[:],units=nc_time.units,calendar='gregorian')\n",
       "    timestamp = np.array(dates)\n",
