--- a/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_ModelDataCompare_Inundation/Scenario_2A_Water_Level_Signell.ipynb
+++ b/Theme_2_Extreme_Events/Scenario_2A_Coastal_Inundation/Scenario_2A_ModelDataCompare_Inundation/Scenario_2A_Water_Level_Signell.ipynb
@@ -49,7 +49,7 @@
       "import matplotlib.pyplot as plt\n",
       "from matplotlib.transforms import offset_copy\n",
       "from cartopy.io.img_tiles import MapQuestOpenAerial\n",
-      "from pandas import DataFrame, fes_date_filter, read_csv, concat\n",
+      "from pandas import DataFrame, date_range, read_csv, concat\n",
       "\n",
       "from iris.exceptions import CoordinateNotFoundError, ConstraintMismatchError\n",
       "\n",
@@ -747,7 +747,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ts_rng = fes_date_filter(start=jd_start, end=jd_stop, freq='6Min')\n",
+      "ts_rng = date_range(start=jd_start, end=jd_stop, freq='6Min')\n",
       "ts = DataFrame(index=ts_rng)\n",
       "print(jd_start, jd_stop)\n",
       "print(len(ts))"
@@ -1381,17 +1381,16 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "if True:\n",
-      "    for df in obs_df:\n",
-      "        amean = df[jd_start:jd_now].mean()\n",
-      "        name = df.name\n",
-      "        df = df - amean + amean.ix[0]\n",
-      "        df.name = name\n",
-      "        ax = df.plot(figsize=(14, 6), title=df.name, legend=False)\n",
-      "        plt.setp(ax.lines[0], linewidth=4.0, color='0.7', zorder=1)\n",
-      "        ax.legend()\n",
-      "        ax.set_ylabel('m')\n",
-      "        print(amean.ix[0] - amean)"
+      "for df in obs_df:\n",
+      "    amean = df[jd_start:jd_now].mean()\n",
+      "    name = df.name\n",
+      "    df = df - amean + amean.ix[0]\n",
+      "    df.name = name\n",
+      "    ax = df.plot(figsize=(14, 6), title=df.name, legend=False)\n",
+      "    plt.setp(ax.lines[0], linewidth=4.0, color='0.7', zorder=1)\n",
+      "    ax.legend()\n",
+      "    ax.set_ylabel('m')\n",
+      "    print(amean.ix[0] - amean)"
      ],
      "language": "python",
      "metadata": {
