Add some documentation to the notebook

--- a/Theme_2_Extreme_Events/Scenario_2A/Comprehensive/test_multiple_endpoints_variables_locations.ipynb
+++ b/Theme_2_Extreme_Events/Scenario_2A/Comprehensive/test_multiple_endpoints_variables_locations.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e01cde128ecbb5e6928e3185f739ace9335b9b52ee2c1a833e463c3c5aa29eb0"
+  "signature": "sha256:1da9419f14a06b8b683de25127863d6f0c9d9fc8fbef9b0b4af07d0a13e96738"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1162,6 +1162,13 @@
       }
      ],
      "prompt_number": 6
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<div class=\"error\"> Some servers have a maximum amount of records you can retrieve at once. See: https://github.com/ioos/system-test/issues/126</div>"
+     ]
     },
     {
      "cell_type": "markdown",
