Link should go to detail description, not topmost heading.

--- a/Theme_1_Baseline/Scenario_1E_Salinity.ipynb
+++ b/Theme_1_Baseline/Scenario_1E_Salinity.ipynb
@@ -50,7 +50,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# IOOS System Test - Theme 1 - Scenario E - [Description](https://github.com/ioos/system-test/wiki/Development-of-Test-Themes#theme1)/[Discussion](https://github.com/ioos/system-test/issues/114)\n",
+      "# IOOS System Test - Theme 1 - Scenario E - [Description](https://github.com/ioos/system-test/wiki/Development-of-Test-Themes#scenario-1e-salinity-data)/[Discussion](https://github.com/ioos/system-test/issues/114)\n",
       "\n",
       "## Exploring Salinity Data in Sensors and Satellite data\n",
       "\n",
