update inline documentation

--- a/Theme_1_Baseline/Scenario_1C_WebService_Strings/Scenario_1C_WebService_Strings.ipynb
+++ b/Theme_1_Baseline/Scenario_1C_WebService_Strings/Scenario_1C_WebService_Strings.ipynb
@@ -9,6 +9,19 @@
   {
    "cells": [
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# IOOS System Test - Theme 1 - Scenario C - [Description](https://github.com/ioos/system-test/wiki/Development-of-Test-Themes#theme-1-baseline-assessment)\n",
+      "\n",
+      "## WebService Strings\n",
+      "This notebook looks at the a series of typical WebServices. It searches for a list of WebService names (strings) in a list of CSW catalogs and simply lists how many services are avialable from each CSW.\n",
+      "\n",
+      "## Guiding Questions\n",
+      "Based on a series of WebService Strings, can we access web services via a series of CSW endpoints and quantify those results? Based on those results, is it apparent that some web services are not being discovered as they are utilizing variations on WebService Strings?\n"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -51,14 +64,20 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "####Search for web services\n",
+      "This is a collection of lists that we will need to examine Catalogs \n"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#This is a collection of lists that we will need to examine Catalogs \n",
-      "\n",
       "web_service_strings = ['urn:x-esri:specification:ServiceType:OPeNDAP',\n",
       "                       'urn:x-esri:specification:ServiceType:odp:url',\n",
       "                       'urn:x-esri:specification:ServiceType:WMS',\n",
@@ -78,16 +97,19 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The next cell lists catalog endpoints.  As CSW's are discovered within the larger IOOS Umbrealla, this list is updated by the IOOS Program Office here: https://github.com/ioos/system-test/wiki/Service-Registries-and-Data-Catalogs"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#This cell lists catalog endpoints.  As CSW's are discovered within the larger\n",
-      "#    IOOS Umbrealla, this list is updated by the IOOS Program Office here:\n",
-      "#    https://github.com/ioos/system-test/wiki/Service-Registries-and-Data-Catalogs\n",
-      "\n",
       "#endpoint = 'http://data.nodc.noaa.gov/geoportal/csw'  # NODC Geoportal: collection level\n",
       "#endpoint = 'http://geodiscover.cgdi.ca/wes/serviceManagerCSW/csw'  # NRCAN \n",
       "#endpoint = 'http://geoport.whoi.edu/gi-cat/services/cswiso' # USGS Woods Hole GI_CAT\n",
@@ -120,7 +142,14 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Test each CSW and look for the specific endpoints. Print the results."
+     ]
     },
     {
      "cell_type": "code",
@@ -182,6 +211,14 @@
        "stream": "stdout",
        "text": [
         "Error\n",
+        "Error"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "                                     Service_URL  \\\n",
         "0   urn:x-esri:specification:ServiceType:OPeNDAP   \n",
         "1   urn:x-esri:specification:ServiceType:odp:url   \n",
@@ -231,12 +268,6 @@
         "45  urn:x-esri:specification:ServiceType:wms:url   \n",
         "46  urn:x-esri:specification:ServiceType:sos:url   \n",
         "47  urn:x-esri:specification:ServiceType:wcs:url   \n",
-        "48  urn:x-esri:specification:ServiceType:OPeNDAP   \n",
-        "49  urn:x-esri:specification:ServiceType:odp:url   \n",
-        "50      urn:x-esri:specification:ServiceType:WMS   \n",
-        "51  urn:x-esri:specification:ServiceType:wms:url   \n",
-        "52  urn:x-esri:specification:ServiceType:sos:url   \n",
-        "53  urn:x-esri:specification:ServiceType:wcs:url   \n",
         "\n",
         "                                             endpoint  number_urls  \\\n",
         "0              http://www.nodc.noaa.gov/geoportal/csw          100   \n",
@@ -287,17 +318,11 @@
         "45  http://geodiscover.cgdi.ca/wes/serviceManagerC...            0   \n",
         "46  http://geodiscover.cgdi.ca/wes/serviceManagerC...            0   \n",
         "47  http://geodiscover.cgdi.ca/wes/serviceManagerC...            0   \n",
-        "48     http://geoport.whoi.edu/gi-cat/services/cswiso            0   \n",
-        "49     http://geoport.whoi.edu/gi-cat/services/cswiso            0   \n",
-        "50     http://geoport.whoi.edu/gi-cat/services/cswiso            0   \n",
-        "51     http://geoport.whoi.edu/gi-cat/services/cswiso            0   \n",
-        "52     http://geoport.whoi.edu/gi-cat/services/cswiso            0   \n",
-        "53     http://geoport.whoi.edu/gi-cat/services/cswiso            0   \n",
         "\n",
         "                                                 urls  \n",
-        "0   [http://data.nodc.noaa.gov/thredds/dodsC/woa/g...  \n",
+        "0   [http://data.nodc.noaa.gov/opendap/jason2/ogdr...  \n",
         "1                                                  []  \n",
-        "2   [http://data.nodc.noaa.gov/thredds/wms/woa/gin...  \n",
+        "2   [http://data.nodc.noaa.gov/thredds/wms/jason2/...  \n",
         "3                                                  []  \n",
         "4                                                  []  \n",
         "5                                                  []  \n",
@@ -342,26 +367,19 @@
         "44                                                 []  \n",
         "45                                                 []  \n",
         "46                                                 []  \n",
-        "47                                                 []  \n",
-        "48                                                 []  \n",
-        "49                                                 []  \n",
-        "50                                                 []  \n",
-        "51                                                 []  \n",
-        "52                                                 []  \n",
-        "53                                                 []  \n",
-        "\n",
-        "[54 rows x 4 columns]"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
+        "47                                                 []  \n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
