--- a/content/downloads/notebooks/2015-09-28-OpeningPost.ipynb
+++ b/content/downloads/notebooks/2015-09-28-OpeningPost.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:378ae65cf1770c42f68fa044989d7b65c7d67bfad734a8845d285b67a904f5b2"
+  "signature": "sha256:45659bb74e709972dcac48ec32d40410864969456ad0decea376ef1f4f7c0d58"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -80,7 +80,7 @@
       "during the\n",
       "[IOOS](http://www.ioos.noaa.gov/)\n",
       "[DMAC](http://www.ioos.noaa.gov/data/dmac/welcome.html)\n",
-      "[system-test](https://github.com/ioos/system-test/wiki) exercise.\n",
+      "[System Integration Test](https://github.com/ioos/system-test/wiki) exercise.\n",
       "\n",
       "The goal is to post readable, bite size, and\n",
       "[executable(!)](http://mybinder.org/) notebooks.\n",
@@ -106,11 +106,11 @@
       "leveraged from the atmospheric community, where these technologies had become\n",
       "community practice.\n",
       "\n",
-      "### What is system-test?\n",
+      "### What is System Integration Test?\n",
       "\n",
       "The System Integration Test (SIT) is an effort to stress-testing DMAC by\n",
-      "evaluating how they scale across geographies, data types, and\n",
-      "for very large datasets and long term archives.\n",
+      "evaluating how they scale across geographies, data types,\n",
+      "very large datasets, and long term archives.\n",
       "\n",
       "The SIT project has been organized into three themes\n",
       "\n",
@@ -119,7 +119,7 @@
       "- 3) Species Protection and Marine Habitat Classification.\n",
       "\n",
       "\n",
-      "Click in the binder badge below load the notebook binder.\n",
+      "Click in the binder badge below to load the notebook binder.\n",
       "You can browse, open, modify, and run any of the notebooks available here.\n",
       "\n",
       "[![Binder](http://mybinder.org/badge.svg)](http://mybinder.org/repo/ioos/system-test/)"
