--- a/index.ipynb
+++ b/index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7714ed8e6601162e194b0bf1038058d335e0471f9851c7848b6956e81657e5dd"
+  "signature": "sha256:d22a5acaea5d4852b829b6c12f3b61750c65bc6a2a3181b1087f56eaf9c49eb8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,9 +28,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- [2015-09-28-OpeningPost.ipynb](content/downloads/notebooks/2015-09-28-OpeningPost.ipynb)\n",
+      "1. [2015-09-28-OpeningPost.ipynb](content/downloads/notebooks/2015-09-28-OpeningPost.ipynb)\n",
       "\n",
-      "- [2015-10-05-HF_Radar_Currents_west_coast.ipynb.ipynb](content/downloads/notebooks/2015-10-05-HF_Radar_Currents_west_coast.ipynb)"
+      "1. [2015-10-12-fetching_data.ipynb](content/downloads/notebooks/2015-10-12-fetching_data.ipynb)"
      ]
     }
    ],
