--- a/index.ipynb
+++ b/index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d22a5acaea5d4852b829b6c12f3b61750c65bc6a2a3181b1087f56eaf9c49eb8"
+  "signature": "sha256:c95c865ce24ac02d9d856df3b6512a2c47e78938d07414b5e60f92416fd6228a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,7 +30,9 @@
      "source": [
       "1. [2015-09-28-OpeningPost.ipynb](content/downloads/notebooks/2015-09-28-OpeningPost.ipynb)\n",
       "\n",
-      "1. [2015-10-12-fetching_data.ipynb](content/downloads/notebooks/2015-10-12-fetching_data.ipynb)"
+      "2. [2015-10-12-fetching_data.ipynb](content/downloads/notebooks/2015-10-12-fetching_data.ipynb)\n",
+      "\n",
+      "3. [2015-10-26-HF_Radar_Currents_west_coast.ipynb](content/downloads/notebooks/2015-10-26-HF_Radar_Currents_west_coast.ipynb)"
      ]
     }
    ],
